--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>nginx-test-app-index-page-v.1.0.5</title>
 </head>
 <body>
-    <h1>Roman Nikiforov, FOPS-25</h1>
-    <p><img src="meme.png" alt="meme.png" /></p>
+    <h1>Roman Nikiforov, FOPS-25, v 1.0.5</h1>
 </body>
 </html>
