--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>nginx-test-app-index-page-v.3.0.0</title>
+    <title>nginx-test-app-index-page-v.1.0.0</title>
 </head>
 <body>
-    <h1>Roman Nikiforov, FOPS-25, v 3.0.0</h1>
+    <h1>Трошин Константин, FOPS-22, v 1.0.0</h1>
 </body>
 </html>
